@@ -21,10 +21,12 @@ import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
+import uk.gov.hmcts.reform.civil.model.search.PaginatedQuery;
 import uk.gov.hmcts.reform.civil.model.search.Query;
 import uk.gov.hmcts.reform.civil.referencedata.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.service.data.UserAuthContent;
 import uk.gov.hmcts.reform.civil.service.referencedata.LocationReferenceDataService;
+import uk.gov.hmcts.reform.cmc.model.ClaimEvent;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
 
 import java.time.LocalDate;
@@ -35,8 +37,10 @@ import java.util.UUID;
 
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.CMC_CASE_TYPE;
+import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.CMC_JURISDICTION;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.GENERALAPPLICATION_CASE_TYPE;
 import static uk.gov.hmcts.reform.civil.CaseDefinitionConstants.JURISDICTION;
+import static uk.gov.hmcts.reform.civil.utils.CaseServiceUtil.getCaseServiceId;
 
 @Service
 @Slf4j
@@ -79,11 +83,14 @@ public class CoreCaseDataService {
                                               String eventSummary,
                                               String eventDescription) {
 
+        StartEventResponse startEventResponse = startUpdate(caseId.toString(), eventName);
+        CaseData caseData = caseDetailsConverter.toCaseData(startEventResponse.getCaseDetails());
         List<LocationRefData> locationRefDataList = referenceDataService.getCourtLocationsByEpimmsId(
             getSystemUpdateUser().getUserToken(),
-            epimdsId
+            epimdsId,
+            getCaseServiceId(caseData.getCaseAccessCategory())
         );
-        LocationRefData locationRefData = locationRefDataList.get(0);
+        LocationRefData locationRefData = locationRefDataList.getFirst();
 
         DynamicListElement dynamicListElement = new DynamicListElement();
         dynamicListElement.setCode(UUID.randomUUID().toString());
@@ -91,9 +98,6 @@ public class CoreCaseDataService {
 
         DynamicList transferCourtLocationList = new DynamicList();
         transferCourtLocationList.setValue(dynamicListElement);
-
-        StartEventResponse startEventResponse = startUpdate(caseId.toString(), eventName);
-        CaseData caseData = caseDetailsConverter.toCaseData(startEventResponse.getCaseDetails());
 
         caseData.setTransferCourtLocationList(transferCourtLocationList);
         caseData.setReasonForTransfer(transferReason);
@@ -125,6 +129,34 @@ public class CoreCaseDataService {
             CASE_TYPE,
             caseId,
             eventName.name()
+        );
+    }
+
+    public StartEventResponse startCMCUpdate(String caseId, ClaimEvent cmcClaimEvent) {
+        UserAuthContent systemUpdateUser = getSystemUpdateUser();
+        return coreCaseDataApi.startEventForCaseWorker(
+            systemUpdateUser.getUserToken(),
+            authTokenGenerator.generate(),
+            systemUpdateUser.getUserId(),
+            CMC_JURISDICTION,
+            CMC_CASE_TYPE,
+            caseId,
+            cmcClaimEvent.getEventName()
+        );
+    }
+
+    public void submitCMCUpdate(String caseId, CaseDataContent caseDataContent) {
+        UserAuthContent systemUpdateUser = getSystemUpdateUser();
+
+        coreCaseDataApi.submitEventForCaseWorker(
+            systemUpdateUser.getUserToken(),
+            authTokenGenerator.generate(),
+            systemUpdateUser.getUserId(),
+            CMC_JURISDICTION,
+            CMC_CASE_TYPE,
+            caseId,
+            true,
+            caseDataContent
         );
     }
 
@@ -194,6 +226,13 @@ public class CoreCaseDataService {
         String userToken = userService.getAccessToken(userConfig.getUserName(), userConfig.getPassword());
         String searchString = query.toString();
         log.info("Searching Elasticsearch with query: " + searchString);
+        return coreCaseDataApi.searchCases(userToken, authTokenGenerator.generate(), CASE_TYPE, searchString);
+    }
+
+    public SearchResult searchCasesPaginated(PaginatedQuery paginatedQuery) {
+        String userToken = userService.getAccessToken(userConfig.getUserName(), userConfig.getPassword());
+        String searchString = paginatedQuery.getJsonString(mapper);
+        log.info("Searching Elasticsearch with paginated query: " + searchString);
         return coreCaseDataApi.searchCases(userToken, authTokenGenerator.generate(), CASE_TYPE, searchString);
     }
 
